# public-betting-service

./: .gitignore  Cargo.toml  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20260519_080307_init_tables.rs
migration/src/sql/: init.sql  init_down.sql
src/: config.rs  container.rs  main.rs
src/api/: mod.rs  user.rs
src/api/middlewares/: auth.rs
src/api/user/: controller.rs  mod.rs  routes.rs  user.rs  user_handlers.rs
src/api/wallet/: controller.rs  mod.rs  response.rs  routes.rs
src/domain/: errors.rs  mod.rs  user.rs  wallet.rs
src/infrastructure/database/: util.rs
src/operation/user/: auth_service.rs  dto.rs  errors.rs  mod.rs  user_service.rs
src/operation/wallet/: errors.rs  mod.rs
src/operation/wallet/create/: dto.rs  mod.rs  service.rs  wallet_service.rs
src/operation/wallet/list/: service.rs
src/repository/: dto.rs  mod.rs  user.rs  user_repository.rs  wallet.rs
src/repository/dto/: wallets_dto.rs
