[package]
name = "betting_test_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
bcrypt = "0.19.1"
dotenvy = "0.15.7"
sea-orm = { version = "2.0.0-rc.38", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["v4"] }
env_logger = "0.11.10"
shaku = { version = "0.6.2", features = ["derive"] }
shaku_actix = "0.2.0"
