[package]
name = "betting_test_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
dotenvy = "0.15.7"
sea-orm = { version = "1.1.20", features = ["runtime-tokio-native-tls", "sqlx-postgres", "with-rust_decimal"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
env_logger = "0.11.10"
shaku = { version = "0.6.2", features = ["derive"] }
log = "0.4.29"
serde_json = "1.0.149"
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v4"] }
envy = "0.4.2"
password-hash = "0.6.1"
rust_decimal = "1.42.0"
futures-util = "0.3.32"
iso_currency = "0.5.3"
